phalcon/css/core.css
/* ... */
@media (min-width: 1280px) {
  .container {
    width: 1200px;
    padding-left: 10px;
    padding-right: 10px; }
    .container--short {
      width: 917px;
      padding-left: 0;
      padding-right: 0; } }

.footer {
  background: rgba(229, 229, 229, 0.4);
  padding-top: 20px;
  padding-bottom: 27px;
  font-family: 'Titillium Web';
  font-weight: normal;
  font-style: normal;
  font-size: 16px; }

.footer-nav {
  margin: 0 auto;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  margin-bottom: 20px; }
  .footer-nav li {
    margin-right: 30px;
    -webkit-transition: .135s;
    -o-transition: .135s;
    transition: .135s; }
    .footer-nav li:last-child {
      margin-right: 0; }
    .footer-nav li a {
      color: #000; }
    .footer-nav li:hover {
      -webkit-transition: .135s;
      -o-transition: .135s;
      transition: .135s;
      -webkit-box-shadow: 0px 1px 0px 0px black;
              box-shadow: 0px 1px 0px 0px black; }

.footer__license {
  text-align: center;
  line-height: 23px;
  color: rgba(39, 54, 70, 0.7);
  margin-bottom: 17px; }

.footer__supported {
  color: rgba(39, 54, 70, 0.4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center; }
  .footer__supported span {
    margin-right: 13px; }

@media (max-width: 767px) {
  .footer-nav {
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap; }
    .footer-nav li {
      line-height: 23px; } }

.phalcon-blog {
  padding: 50px 0;
  font-family: 'Titillium Web';
  font-weight: normal;
  font-style: normal; }

.phalcon-blog .container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
      -ms-flex-align: start;
          align-items: flex-start; }

.phalcon-blog__main {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1; }

.phalcon-blog__right {
  width: 350px;
  top: 10px;
  margin-left: 20px; }

.phalcon-blog__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 35px; }

.phalcon-blog__item-content {
  width: 100%; }

.phalcon-blog__item-img {
  display: block;
  width: 180px;
  height: 180px;
  -webkit-flex-shrink: 0;
      -ms-flex-negative: 0;
          flex-shrink: 0;
  margin-left: 20px;
  text-align: center;
  position: relative; }
  .phalcon-blog__item-img img {
    width: 100%;
    height: 100%;
    max-width: 350px;
    -o-object-fit: cover;
       object-fit: cover; }
  .phalcon-blog__item-img:after {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    background: rgba(229, 229, 229, 0.5); }

.phalcon-blog__item-title {
  font-family: 'Titillium Web';
  font-weight: 700;
  font-style: normal;
  display: block;
  font-size: 25px;
  margin-bottom: 5px; }
  .phalcon-blog__item-title a {
    color: #273646; }

.phalcon-blog__item-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #68727e;
  margin-bottom: 5px;
  font-size: 12px;
  line-height: 17px; }

.phalcon-blog__item-date {
  margin-right: 22px;
  position: relative; }
  .phalcon-blog__item-date:after {
    position: absolute;
    content: '';
    width: 2px;
    height: 2px;
    background-color: #68727e;
    -webkit-border-radius: 50%;
            border-radius: 50%;
    right: -12px;
    top: 7px; }

.phalcon-blog__item-article {
  font-size: 14px;
  color: #68727e;
  margin-bottom: 11px;
  -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  overflow: hidden;
  line-height: 20px; }
  .phalcon-blog__item-article p {
    margin: 0;
    line-height: 20px; }
  .phalcon-blog__item-article a {
    color: #385B56;
    line-height: 23px;
    font-size: 16px;
    border-bottom: 1px solid #385B56;
    -webkit-transition: all .125s;
    -o-transition: all .125s;
    transition: all .125s; }
    .phalcon-blog__item-article a:hover {
      border-bottom-color: transparent; }

.phalcon-blog__item-read-more {
  font-size: 14px;
  color: #385B56;
  border-bottom: 1px solid #385B56;
  -webkit-transition: all .125s;
  -o-transition: all .125s;
  transition: all .125s; }
  .phalcon-blog__item-read-more:hover {
    border-bottom-color: transparent; }

.phalcon-blog__main-title {
  text-transform: uppercase;
  font-family: 'Titillium Web';
  font-weight: 100;
  font-style: normal;
  margin-bottom: 30px; }

.phalcon-blog__last-article .phalcon-blog__item {
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
  -webkit-flex-direction: row-reverse;
      -ms-flex-direction: row-reverse;
          flex-direction: row-reverse;
  -webkit-flex-wrap: wrap;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap;
  margin-bottom: 30px; }

.phalcon-blog__last-article .phalcon-blog__item-img {
  width: 100%;
  -webkit-box-ordinal-group: 0;
  -webkit-order: -1;
      -ms-flex-order: -1;
          order: -1;
  margin-bottom: 10px; }
  .phalcon-blog__last-article .phalcon-blog__item-img:after {
    display: none; }

.phalcon-blog__right-item {
  margin-bottom: 35px; }
/* ... */

